k8s/40-airflow.yaml
apiVersion: v1
kind: Service
metadata: {name: airflow-web, namespace: payments, labels: {app: airflow-web}}
spec:
  selector: {app: airflow-web}
  ports: [{name: http, port: 8080, targetPort: 8080}]
---
apiVersion: apps/v1
kind: Deployment
metadata: {name: airflow-web, namespace: payments}
spec:
  replicas: 1
  selector: {matchLabels: {app: airflow-web}}
  template:
    metadata: {labels: {app: airflow-web}}
    spec:
      containers:
        - name: webserver
          image: apache/airflow:2.9.3
          args: ["webserver"]
          ports: [{containerPort: 8080}]
          envFrom: [{configMapRef: {name: airflow-config}}]
          resources: {requests: {cpu: "250m", memory: 512Mi}, limits: {cpu: "1", memory: 1Gi}}
---
apiVersion: apps/v1
kind: Deployment
metadata: {name: airflow-scheduler, namespace: payments}
spec:
  replicas: 1
  selector: {matchLabels: {app: airflow-scheduler}}
  template:
    metadata: {labels: {app: airflow-scheduler}}
    spec:
      containers:
        - name: scheduler
          image: apache/airflow:2.9.3
          args: ["scheduler"]
          envFrom: [{configMapRef: {name: airflow-config}}]
          resources: {requests: {cpu: "250m", memory: 512Mi}, limits: {cpu: "1", memory: 1Gi}}
